teslamate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  labels:
    app: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate
  template:
    metadata:
      labels:
        app: teslamate
    spec:
      containers:
        - name: teslamate
          image: dockerhub.vshn.net/teslamate/teslamate:latest
          ports:
            - containerPort: 4000
              name: http
