teslamate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: teslamate.aukia.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: oauth2-proxy-teslamate
                port:
                  number: 4180
  tls:
    - hosts:
        - teslamate.aukia.com
      secretName: teslamate-tls
