teslamate/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: teslamate
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: oauth2-proxy-teslamate
    weight: 100
  port:
    targetPort: http
